--- a/src/component/App/style.scss
+++ b/src/component/App/style.scss
@@ -1,6 +1,6 @@
 .App {
-    width: 80%;
+    width: 100%;
+    background-color: rgb(171, 185, 181);
     height: auto;
-    margin: 0 auto;
-    box-sizing: content-box;
+    margin: 0;
 }
