welcome page done

--- a/src/component/Main/style.scss
+++ b/src/component/Main/style.scss
@@ -2,3 +2,11 @@
     width: 80%;
     margin: 0 auto;
 }
+
+// Media queries
+
+@media(max-width:480px){
+    .main{
+        width: 100%;
+    }
+}
