--- a/src/component/App/style.scss
+++ b/src/component/App/style.scss
@@ -1,6 +1,9 @@
 .App {
     width: 100%;
-    background-color: rgb(171, 185, 181);
     height: auto;
     margin: 0;
+    background-color: rgb(171, 185, 181);
+     &-welcome{
+         height: 100vh;
+     }
 }
