--- a/src/component/Header/style.scss
+++ b/src/component/Header/style.scss
@@ -6,7 +6,7 @@
     display: flex;
     background-color: rgb(171, 185, 181);    
     z-index: 3;
-    transition: ease-in .5s;
+    transition: ease-in 1s;
         &-container{
             display: flex;
             align-items: center;
@@ -20,12 +20,22 @@
             transition: ease 1s;
             height: 10vh;
         }
+        &-closed{
+            height: 100vh;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            background-color: burlywood;
+        }
+        &-close{
+            display: none;
+        }
         &-picture{
             animation: floating infinite 5s ease 3.5s;        
         }
         &-image{
             width: 100px;
-            animation: transform;
             transition: transform .5s;
             &:hover{
                 transform: scale(1.2);
@@ -45,12 +55,39 @@
                 }
             }
         }
+        &-intro{
+            display: flex;
+            flex-direction: column;
+            text-align: center;
+        }
+        &-me{
+            display: flex;
+            align-items: flex-end;
+            margin-bottom: 1rem;
+        }
+
         &-title{
             font-size: 2.2rem;
             font-weight: bold;
             color: rgb(0, 0, 0);
+            margin: 0 .3rem -4px;
+            animation: ease 3s titleenter ;            
+        }
+        &-portfolio{
+            font-size: 2.2rem;
+            font-weight: bold;
+            color: rgb(0, 0, 0);
+            margin: 0 .3rem -4px;
+            animation: ease 2s folioenter ;
+        }
+        &-button{
+            margin: 2rem;
+            padding: 1rem;
+            border-radius: 5px;
+            animation: clickit 4s;
         }
         &-nav{
+            animation: naventer 3s;
             display: flex;
             flex-wrap: nowrap;
             color: rgb(95, 87, 87);
@@ -68,34 +105,88 @@
 }
 
 @keyframes turn {
-    from {transform: rotate(0deg);}
-    to {transform: rotate(360deg);}
+    from    {transform: rotate(0deg);}
+    to      {transform: rotate(360deg);}
 }
 @keyframes enter {
-    from {
-        opacity: 0;
-        transform: 
-            translateX(-300px)
-            translateY(500px)
-            scale(3)
-        ;}
-    to {
-        opacity: 1;
-        transform: 
-            translateX(0)
-            translateY(0)
-            scale(1);
-    }
+    from    {opacity: 0;
+            transform: 
+                translateX(-300px)
+                translateY(500px)
+                scale(3)}
+    to      {opacity: 1;
+            transform: 
+                translateX(0)
+                translateY(0)
+                scale(1)}
 }
-@keyframes floating {
-    0%{
-        transform: translateY(0);
-    }
-    50%{
-        transform: translateY(15px)
-    }
-    100%{
-        transform: translateY(0);
-    }
 
+@keyframes starenter {
+    from    {opacity: 0;
+            transform: 
+                translateX(-300px)
+                translateY(500px)
+                scale(3)}
+    to      {opacity: 1;
+            transform: 
+                translateX(0)
+                translateY(0)
+                scale(1)}
+}
+
+@keyframes naventer {
+    0%      {opacity: 0;
+            transform: translateX(300px)}
+    70%     {opacity: 0;
+            transform: translateX(300px)}
+    100%    {opacity: 1;
+            transform: translateX(0)}
+}
+
+@keyframes titleenter {
+    0%      {opacity: 0;
+            transform: translateY(-380px)
+            translateX(-40px)
+            scale(0.3)}
+    40%     {opacity: 1;
+            transform: translateY(-400px)
+            translateX(-40px)
+            scale(0.7)}
+    50%     {opacity: 1;      
+            transform: translateY(-450px)}
+    100%    {transform: translateY(0)}
+}
+
+@keyframes folioenter{
+    0%      { margin-left: -700px;
+            opacity: 0;}
+    40%     { margin-left: -700px;
+            opacity: 0; }
+    75%     { opacity: 0; }
+    100%    { margin-left: 0px;}
+}
+
+@keyframes floating {
+    0%      {transform: translateY(0)}
+    50%     {transform: translateY(15px)}
+    100%    {transform: translateY(0)}
+}
+
+@keyframes clickit {
+    0%      {opacity: 0}
+    80%     {opacity: 0}
+    100%    {opacity: 1}
+}
+
+// Media queries
+
+@media(max-width:480px){
+ .header{
+    &-container{
+        width: 100%;
+    }
+    &-title, &-portfolio{
+        font-size: 1rem;
+    }
+ }   
 }
