--- a/src/component/Header/style.scss
+++ b/src/component/Header/style.scss
@@ -6,7 +6,7 @@
     display: flex;
     background-color: rgb(171, 185, 181);    
     z-index: 3;
-    transition: ease-in 1s;
+    transition: ease-in 0.3s;
         &-container{
             display: flex;
             align-items: center;
@@ -17,7 +17,7 @@
         &-scrolling{
             background-color: rgb(55, 141, 117);
             box-shadow: 0 0 10px rgba(0,0,0,1);
-            transition: ease 1s;
+            transition: linear .3s;
             height: 10vh;
         }
         &-closed{
