--- a/src/component/Header/style.scss
+++ b/src/component/Header/style.scss
@@ -66,14 +66,14 @@
             align-items: flex-end;
         }
         &-text{
-            animation: text 4s;
+            animation: text 6s;
         }
         &-title{
             font-size: 2.2rem;
             font-weight: bold;
             color: rgb(0, 0, 0);
             margin: 0 .3rem -4px;
-            animation: ease 3s titleenter ;        
+            animation: ease 5s titleenter ;        
         }
         &-portfolio{
             font-size: 2.2rem;
@@ -86,7 +86,7 @@
             margin: 2rem;
             padding: 1rem;
             border-radius: 5px;
-            animation: clickit 5.5s;
+            animation: clickit 7.5s;
         }
         &-nav{
             animation: naventer 3s;
@@ -149,16 +149,33 @@
 
 @keyframes titleenter {
     0%      {opacity: 0;
-            transform: translateY(-380px)
-            translateX(-40px)
-            scale(0.3)}
-    40%     {opacity: 1;
-            transform: translateY(-400px)
-            translateX(-40px)
-            scale(0.7)}
-    50%     {opacity: 1;      
-            transform: translateY(-450px)}
-    100%    {transform: translateY(0)}
+            transform: 
+                translateY(-280px)
+                translateX(-140px)
+                scale(0.4)}
+    30%      {opacity: 1;
+            transform: 
+                translateY(-280px)
+                translateX(-140px)
+                scale(0.4)}        
+    50%     {transform: 
+                translateY(-400px)
+                translateX(-40px)
+                scale(0.7)
+            }
+    55%     {transform: translateY(-450px)
+            rotateY(360deg)}
+            80%{transform: translateY(0);
+                opacity: 1;}
+                82%{opacity: 0;}
+            83%{opacity: 1;}
+            85%{opacity: 0;}
+            86%{opacity: 1;}
+            93%{opacity: 1;}
+            96%{opacity: 0;}
+            97%{opacity: 1;}
+            99%{opacity: 0;}
+            100%{opacity: 1;}
 }
 
 @keyframes folioenter{
