responsive header/animation + burger done

--- a/src/component/Features/ScrollTopButton/style.scss
+++ b/src/component/Features/ScrollTopButton/style.scss
@@ -1,14 +1,14 @@
-.scroll-to-top{
+.scrollToTop{
     position: fixed;
     bottom: 20px;
     left: 3%;
     text-align: center;
-    &-text{
-        color: white;
-        font-size: 0.8rem;
-        font-weight: bold;
-        z-index: 14;
-    }    
+        &-text{
+            color: white;
+            font-size: 0.8rem;
+            font-weight: bold;
+            z-index: 14;
+        }    
 }
 .react-icons{
     color: white;
@@ -18,20 +18,20 @@
     border-radius: 50%;
     transition: transform 0.5s;
     z-index: 15;
-    &:hover{
-        transform: rotate(1080deg) scale(1.5);
-        transition: 1;
-    }
+        &:hover{
+            transform: rotate(1080deg) scale(1.5);
+            transition: 1;
+        }
 }
 
 // Media Queries
 
 @media(max-width:480px){
-    .scroll-to-top{
-        bottom: 0px;
-        &-text{
-            font-size: .5rem;
-        }
+    .scrollToTop{
+        bottom: 10px;
+            &-text{
+                font-size: .6rem;
+            }
     }
     .react-icons{
     font-size: 2rem;
