--- a/src/component/Features/Burger/style.scss
+++ b/src/component/Features/Burger/style.scss
@@ -1,8 +1,4 @@
-.burger{    
-    &-nav{
-              
-    }    
-    //////////////////////// burger button///////////////////////////    
+.burger{       
     &-button{
         height: 4rem;
         width: 5rem;
@@ -19,7 +15,7 @@
         text-shadow: black 0.1em 0.1em 0.2em;
         box-shadow: black 0.1em 0.1em 0.2em;
         position: fixed;
-        top: 0;
+        top: 20px;
         right: 0;
         z-index: 20;
         display: none;
@@ -31,11 +27,10 @@
         background-color: rgb(71, 36, 16);
         border-radius: 10px;
         transform-origin: 1px;
-        transition: all 0.3s linear;
-        z-index: 20;        
+        transition: all 0.3s linear;        
         &--open{
             &--1{
-                transform: translate(15%) rotate(45deg), ;
+                transform: translateX(15%) rotate(45deg), ;
                 width: 2.25rem;
                 background-color: rgb(255, 255, 255);
             }    
@@ -49,8 +44,7 @@
                 background-color: rgb(255, 255, 255);
             }          
         }
-    } 
-    
+    }    
 }
 
 // Media Queries
@@ -61,12 +55,10 @@
             display: flex;
             &--open{
                 transition: all 0.4s linear;
-                background-color: transparent;
-                transform: translateX(-100%);    
+                background-color: transparent;    
             }
             &--closed{
                 transition: all 0.4s linear;
-                transform: translateX(0%); 
             }           
         }
     }
