--- a/src/component/App/style.scss
+++ b/src/component/App/style.scss
@@ -2,9 +2,11 @@
     width: 100%;
     height: auto;
     margin: 0;
-    background-color: rgb(171, 185, 181);
+    background-color: #B0B0B0;
+    font-family: 'Acme', sans-serif;
      &-welcome{
          height: 100vh;
+         font-family: 'Acme', sans-serif;
      }
 }
 
