--- a/src/component/Footer/style.scss
+++ b/src/component/Footer/style.scss
@@ -1,4 +1,7 @@
 .footer{
-    height: 15vh;
-    background-color: rgb(78, 63, 63);
+    height: 8vh;
+    background-color: #797979;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
