--- a/src/component/Main/Home/style.scss
+++ b/src/component/Main/Home/style.scss
@@ -42,8 +42,7 @@
         }    
         &-foot-text{
             color: white;
-            font-family: Roboto, sans-serif;
-            font-weight: 100;            
+            font-size: 1.2rem;      
         }
         &-scroll{    
             flex: 1;
