--- a/src/component/Features/Burger/style.scss
+++ b/src/component/Features/Burger/style.scss
@@ -1,19 +1,16 @@
 .burger{       
     &-button{
+        position: absolute;
         height: 4rem;
         width: 5rem;
         margin-right: 1rem;
         display: flex;
         align-items: center;
         flex-flow: column nowrap;
-        justify-content: center;
-        color: white;
-        background-color: #83992b;        
+        justify-content: center;       
         border-radius: 10px;
-        font-weight: bold;
-        font-size: 0.7rem;
-        text-shadow: black 0.1em 0.1em 0.2em;
-        box-shadow: black 0.1em 0.1em 0.2em;
+        background-color: 	#C0C0C0 ;
+        box-shadow: black 0.3em 0.2em 0.2em;
         position: fixed;
         top: 20px;
         right: 0;
@@ -24,15 +21,19 @@
         margin: 0.25rem 0;
         width: 2rem;
         height: 0.25rem;
-        background-color: rgb(71, 36, 16);
+        background-color: black;
         border-radius: 10px;
         transform-origin: 1px;
-        transition: all 0.3s linear;        
+        transition: all 0.3s linear;
+        &-text{
+            color: white;
+            font-family: 'Acme', sans-serif;
+        }     
         &--open{
             &--1{
                 transform: translateX(15%) rotate(45deg), ;
                 width: 2.25rem;
-                background-color: rgb(255, 255, 255);
+                background-color: rgb(177, 38, 38);
             }    
             &--2{
                 transform: translateX(100%);
@@ -41,7 +42,7 @@
             &--3{
                 transform: translate(15%) rotate(-45deg);
                 width: 2.25rem;
-                background-color: rgb(255, 255, 255);
+                background-color: rgb(177, 38, 38);
             }          
         }
     }    
