--- a/src/component/Header/Nav/style.scss
+++ b/src/component/Header/Nav/style.scss
@@ -2,26 +2,33 @@
     &-list{
         display: flex; 
         flex-wrap: wrap;
-        justify-content: center;    
+        justify-content: center;
+        align-items: baseline;  
         margin: 0;
     }
 
     &-links{
         display:inline-block;
-        color: red;
-        padding: 10px;
+        align-self: baseline;
+        font-family: 'Acme', sans-serif;
+        padding: 5px 10px;
+        margin: 0 5px;
+        color: #585858;
         font-weight: bold;
-        transition: transform .5s, color .5s;
+        transition: all .5s;
             &:hover{
-                transform: scale(1.5) translateY(-2px);
-                color: white;                
+                transform: scale(1.5) translateY(-2px);           
             }
             
     }
 }
     
 .active{
+    border-bottom: white solid 4px;
+    border-top: white solid 4px ;
+    border-radius: 10px;
     color: black;
+    
 }
 
 // Media Queries
@@ -29,12 +36,11 @@
 @media (max-width: 976px) {
     .nav{
         &-list{
-            // burger menu
             &--open, &--closed{
                 display: flex;
                 flex-flow: column nowrap;
                 align-items: center;
-                background-color: #0D2538;
+                background-color: 	#252525;
                 min-height: 100vh;
                 border-left: white 2px solid;
                 position: fixed;
@@ -52,7 +58,8 @@
             }  
         }
         &-links{
-            margin: 0;                
+            margin: 10px 0;
+            font-size: 1.5rem;               
         }        
     }
 }
