--- a/src/component/Main/Projects/style.scss
+++ b/src/component/Main/Projects/style.scss
@@ -1,3 +1,25 @@
-.projects{
-    height: 100vh;
+.project{
+    min-height: 100vh;
+    &-title{
+        font-size: 2rem;
+        font-weight: bold;
+        text-align: center;
+        margin-bottom: 3rem;
+    }
+     &-cards{
+         display: flex;
+         flex-direction: column;
+     }
+     &-card01{
+         display: flex;
+         justify-content: flex-start;
+     }
+     &-card02{
+        display: flex;
+        justify-content: center;
+     }
+     &-card03{
+        display: flex;
+        justify-content: flex-end;
+     }
 }
