Home + Project + Responsive done

--- a/src/component/Header/Nav/style.scss
+++ b/src/component/Header/Nav/style.scss
@@ -39,7 +39,7 @@
                 display: flex;
                 flex-flow: column nowrap;
                 align-items: center;
-                background-color: 	#252525;
+                background-color:#A9A9A9;
                 min-height: 100vh;
                 border-left: white 2px solid;
                 position: fixed;
