--- a/src/component/Features/Card/style.scss
+++ b/src/component/Features/Card/style.scss
@@ -1,9 +1,10 @@
 .card{
-    max-width: 60%;
+    width: 60%;
     margin: 10px;
     border-radius: 10px;
-    padding: 10px 0;
-    
+    background-color:#D3D3D3;
+    box-shadow: black 0 0 1rem;
+    padding: 10px 0;    
     display: flex;
         &-left{
             width: 40%;
@@ -18,7 +19,8 @@
             margin: .5rem;
         }
         &-img{
-            width: 100%;         
+            width: 100%;
+            border-radius: 10px;        
         }
         &-right{
             width: 60%;            
@@ -29,21 +31,29 @@
         &-text{
             margin: 4rem 1rem 1rem 2rem;
             text-align: center;
+            font-size: 1.2rem;
         }
         &-tech{
             align-self: center;
+            font-weight: bold;
         }
         &-buttons{
             align-self: flex-end;
-            margin-right: 3rem;
+            margin: 0 3rem 1rem 0;
         }
         &-button{
+            font-family: 'Acme', sans-serif;
             margin-left: 4rem;
+            border-radius: 5px;
+            background-color: rgb(184, 184, 184);
+            box-shadow: rgb(59, 59, 59) 0.1rem 0.1rem 0.1rem;
             &-hidden{
                 display: none;
             }
             &-link{
-                color: black;
+                color: white;
+                font-size: 1rem;
+                text-shadow: black 0.1rem 0.1rem 0.1rem;
             }
         }
 }
@@ -52,42 +62,30 @@
 
 @media(max-width:480px){
     .card{
-        max-width: 10%;
-        min-width: 300px;
-        margin: 10px;
-        border: black 3px solid;
-        border-radius: 10px;
-        padding: 10px 0;
-        background-color: blanchedalmond;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        padding: 20px;
             &-title{
-                font-size: 1.8rem;
-                font-weight: bold;
-                text-align: center;
+                font-size: 1.5rem;
             }
-            &-image{
-                text-align: center;
-            }
-            &-img{
+           &-left, &-right{
                 width: 100%;
-                margin: 0.5rem 0;            
-            }
-            &-content{
-                height: 10vh;
-                display: flex;
-                flex-direction: column;
-                justify-content: space-between;
-            }
-            &-text{
-                margin: 0 1rem;
-            }
-            &-buttons{
-                display: flex;
-                justify-content: space-around;
-            }
-            &-button{
-                &-link{
-                    color: black;
-                }
-            }
+                margin: 0;
+           }
+           &-text{
+               margin: 1rem 0;
+           }
+           &-tech{
+               margin-bottom: 1rem;
+           }
+           &-buttons{
+               align-self: center;
+               margin: 0;
+           }
+           &-button{
+               margin: 0 2rem;
+           }
+            
     }
 }
