--- a/src/component/Main/Career/style.scss
+++ b/src/component/Main/Career/style.scss
@@ -1,3 +1,9 @@
-.cv{
+.career{
     min-height: 100vh;
+    margin-top: 4rem;
+        &-title{
+            text-align: center;
+            font-size: 2.2rem;
+            font-weight: bold;
+        }
 }
