--- a/src/component/Main/Projects/style.scss
+++ b/src/component/Main/Projects/style.scss
@@ -4,7 +4,7 @@
         font-size: 2rem;
         font-weight: bold;
         text-align: center;
-        margin-bottom: 3rem;
+        margin-bottom: 1.5rem;
     }
      &-cards{
          display: flex;
@@ -22,4 +22,9 @@
         display: flex;
         justify-content: flex-end;
      }
+}
+@media(max-width:480px){
+    .project{
+        width: 100%;
+    }
 }
