--- a/src/component/Main/Career/style.scss
+++ b/src/component/Main/Career/style.scss
@@ -1,9 +1,83 @@
 .career{
     min-height: 100vh;
-    margin-top: 4rem;
+    margin: 4rem 0;
+        &-image{
+            text-align: center;        }
+        &-img{
+            width: 10%;
+        }
         &-title{
             text-align: center;
             font-size: 2.2rem;
             font-weight: bold;
+            margin-bottom: 3rem;
+        }
+        &-container{
+            box-shadow: inset 0 0 20px #000000;
+            background-color: rgb(200, 200, 200) ;
+            border-radius: 10px;
+            padding: 30px 30px 0 30px;
+            display: flex;
+            flex-direction: column;            
+        }
+        &-line{
+            position: relative;
+            background-color: white;
+            width: 5px;
+            min-height: 30vh;
+            margin: 0 3rem;
+        }
+        &-imgOpquast, &-imgOclock, &-imgPlane{
+            position: absolute;
+            left: -38px;
+            width: 80px;
+            height: 80px;
+            border-radius: 50%; 
+        }
+        &-imgPcDiploma{
+            width: 17%;
+        }
+        &-imgBac{
+            width: 20%;
+        }
+        &-badge{
+            margin-top: .5rem;
+            width: 100px;
+        }
+        &-item{
+            display: flex;
+            &-date{
+                width: 5%;
+                font-weight: bold;
+                margin: 2rem 1rem 0 0;
+            }
+            &-container{
+                background-color: #D3D3D3;
+                max-height: 26vh;
+                width: 80%;
+                box-shadow: black 0.2rem 0.2rem 1rem;
+                border-radius: 15px;
+                display: flex;
+                align-items: center;
+            }
+            &-content{
+                margin: 0.5rem 1rem;
+                text-align: center;
+                width: 40%;
+            }
+            &-title{
+                font-weight: bold;
+                font-size: 1.7rem;
+            }
+            &-description{                
+                margin-top: .5rem;               
+            }
+            &-text{
+                margin: 0.5rem;
+                width: 60%;
+            }
+            &-badge{
+                text-align: center;
+            }
         }
 }
