--- a/src/component/Main/Projects/style.scss
+++ b/src/component/Main/Projects/style.scss
@@ -1,27 +1,33 @@
 .project{
     min-height: 100vh;
-    &-title{
-        font-size: 2rem;
-        font-weight: bold;
-        text-align: center;
-        margin-bottom: 1.5rem;
-    }
-     &-cards{
-         display: flex;
-         flex-direction: column;
-     }
-     &-card01{
-         display: flex;
-         justify-content: flex-start;
-     }
-     &-card02{
-        display: flex;
-        justify-content: center;
-     }
-     &-card03{
-        display: flex;
-        justify-content: flex-end;
-     }
+        &-image{
+            text-align: center;
+        }
+        &-img{
+            width: 10%;
+        }
+        &-title{
+            font-size: 2rem;
+            font-weight: bold;
+            text-align: center;
+            margin-bottom: 1.5rem;
+        }
+        &-cards{
+            display: flex;
+            flex-direction: column;
+        }
+        &-card01{
+            display: flex;
+            justify-content: flex-start;
+        }
+        &-card02{
+            display: flex;
+            justify-content: center;
+        }
+        &-card03{
+            display: flex;
+            justify-content: flex-end;
+        }
 }
 @media(max-width:480px){
     .project{
