--- a/src/component/Main/Home/style.scss
+++ b/src/component/Main/Home/style.scss
@@ -99,7 +99,7 @@
     100% { transform: translateY(0); }
 }
 
-@media(max-width:480px){
+@media(max-width:976px){
     .home{
         height: 100%;
         display: flex;
@@ -120,8 +120,16 @@
             display: none;
         }
         &-slogan{
-            margin-top: 4%;
-            right: 5%;
+            margin-top: 10%;
+            right: 15%;
+            padding: 0.4em
         }
     }
    }
+@media(max-width:400px){
+    .home{
+        &-left{
+            margin-top: 3rem;
+        }
+    }
+}
