fix some issue Ipad responsive

--- a/src/component/Main/About/style.scss
+++ b/src/component/Main/About/style.scss
@@ -5,7 +5,7 @@
         text-align: center;
     }
     &-img{
-        width: 8%;
+        width: 170px;
     }
         &-title{
             text-align: center;
