--- a/src/component/Main/Projects/style.scss
+++ b/src/component/Main/Projects/style.scss
@@ -4,7 +4,7 @@
             text-align: center;
         }
         &-img{
-            width: 10%;
+            width: 200px;
         }
         &-title{
             font-size: 2rem;
