--- a/src/component/Main/Career/style.scss
+++ b/src/component/Main/Career/style.scss
@@ -6,6 +6,7 @@
         }
         &-img{
             width: 200px;
+            margin: -2rem;
         }
         &-title{
             text-align: center;
@@ -47,39 +48,46 @@
         }
         &-item{
             display: flex;
-            &-date{
-                width: 5%;
-                font-weight: bold;
-                margin: 2rem 1rem 0 0;
-            }
-            &-container{
-                background-color: #D3D3D3;
-                width: 80%;
-                box-shadow: black 0.2rem 0.2rem 1rem;
-                border-radius: 15px;
-                display: flex;
-                align-items: center;
-                max-height: 26vh;
-            }
-            &-content{
-                margin: 0.5rem 1rem;
-                text-align: center;
-                width: 40%;
-            }
-            &-title{
-                font-weight: bold;
-                font-size: 1.7rem;
-            }
-            &-description{                
-                margin-top: .5rem;               
-            }
-            &-text{
-                margin: 0.5rem;
-                width: 60%;
-            }
-            &-badge{
-                text-align: center;
-            }
+                &-date{
+                    width: 5%;
+                    font-weight: bold;
+                    margin: 2rem 1rem 0 0;
+                }
+                &-container{
+                    background-color: #D3D3D3;
+                    width: 80%;
+                    box-shadow: black 0.2rem 0.2rem 1rem;
+                    border-radius: 15px;
+                    display: flex;
+                    align-items: center;
+                    max-height: 26vh;
+                }
+                &-content{
+                    margin: 0.5rem 1rem;
+                    text-align: center;
+                    width: 40%;
+                }
+                &-title{
+                    font-weight: bold;
+                    font-size: 1.7rem;
+                }
+                &-description{                
+                    margin-top: .5rem;               
+                }
+                &-badge{
+                    text-align: center;
+                }
+                &-link{
+                    margin-top: .5rem;
+                }
+                &-text{
+                    margin: 0.5rem;
+                    width: 60%;
+                        &-title{
+                            font-weight: bold;
+                            margin: .5rem 0;
+                        }
+                }
         }
 }
 @media(max-width:1025px){
@@ -87,7 +95,7 @@
         &-imgOpquast, &-imgOclock, &-imgPlane{
             width: 40px;
             height: 40px;
-            left: -20px
+            left: -18px
         }
         &-line{
             margin: 0 1.5rem 0 0 ;
